Bodhi project updates

--- a/bodhi.html
+++ b/bodhi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bodhi</title>
+    <title>Bodhi at Redhat Inc.</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -82,7 +82,7 @@
         <table>
           <tr>
             <td class="project">
-              <h4 class="home-project-title" style="padding-bottom:0">Bodhi</h4>
+              <h4 class="home-project-title" style="padding-bottom:0">Bodhi at Redhat Inc.</h4>
             </td>
             <td class="line" style="padding-left:1em; vertical-align:middle">
               <svg height="6" width="100%">
@@ -91,12 +91,12 @@
             </td>
           </tr>
         </table>
-        <h3 class="home-project-subtitle"></h3>
-        <h6 class="home-project-tags">research, redesign, evaluation</h6>
-        <p class="home-project-blurb">May'16 - Aug'16</p>
+        <h3 class="home-project-subtitle">Existing OS update management portal had several usability issues which primarily led to low productivity amongst developers and testers and difficulty in onboarding of new open-source contributors.<br/><br/> As an intern, I led the redesign and delivered prototypes for newer version</h3>
+        <h6 class="home-project-tags">research, redesign, prototype, evaluate</h6>
+        <p class="home-project-blurb">Jul'16 - Aug'16</p>
       </div>
       <div class="col-md-6 home-project-right">
-        <div class="card card-elt"><a href="img/origin_banner_resized_3.png" target="_blank"><img class="img-responsive" src="img/origin_banner_resized_3.png" title="Click to see enlarged image"/></a>
+        <div class="card card-elt"><a href="img/bodhi1.png" target="_blank"><img class="img-responsive" src="img/bodhi1.png" title="Click to see enlarged image"/></a>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
     <div class="container">
       <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-        <p><a class="navbar-brand" href="index.html">Home</a><span class="navbar-brand">/</span><span class="navbar-brand navbar-brand-currentpage">Bodhi</span></p>
+        <p><a class="navbar-brand" href="index.html">Home</a><span class="navbar-brand">/</span><span class="navbar-brand navbar-brand-currentpage">Bodhi at Redhat Inc.</span></p>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -524,6 +524,14 @@
             <h3>Interaction map						</h3>
           </section>
         </article>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 center-block" style="float:none">
+        <div class="card card-elt"><a href="img/w_bodhi/bodhi.png" target="_blank"><img class="img-responsive" src="img/w_bodhi/bodhi.png" style="margin: 0 auto" title="Click to see enlarged image"/></a>
+        </div>
       </div>
     </div>
   </div>
