--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
       <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
           <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-linux"></i><span style="padding-left:1rem">&nbsp; Bodhi at Redhat Inc.</span></h5>
+          <h2 class="home-project-subtitle">Redesigning Fedora OS update management portal</h2>
+          <p class="ptufte home-project-blurb">Existing OS update management portal had several usability issues which primarily led to low productivity amongst developers and testers and difficulty in onboaarding of new open-source contributors. As an intern, I led the redesign and delivered prototypes for newer version</p>
+          <h6 class="ptufte home-project-tags">research, redesign, prototype, evaluate</h6>
+          <p class="ptufte home-project-blurb">Jul'16 - Aug'16</p><br/>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="bodhi.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+              </td>
+            </tr>
+          </table>
+        </div>
+        <div class="col-sm-8 project-banner-setting">
+          <div class="card1" style="padding:1rem"><a href="bodhi.html"><img class="img-fluid" src="img/bodhi1.png"/></a></div>
+        </div>
+      </div>
+      <div class="row home-brief" style="padding-bottom:5rem">
+        <div class="col-sm-4 home-project-brief">
+          <hr class="separator"/>
           <h5 class="home-project-title"><i class="fa fa-gamepad"></i><span style="padding-left:1rem">&nbsp; Latitude 90 - the origin</span></h5>
           <h2 class="home-project-subtitle">First mobile-social hybrid deduction game</h2>
           <p class="ptufte home-project-blurb">Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
